--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,10 +14,22 @@
         <action
             android:id="@+id/action_fragmentSignIn_to_fragmentLogIn"
             app:destination="@id/fragmentLogIn" />
+        <action
+            android:id="@+id/action_fragmentSignIn_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/fragmentLogIn"
         android:name="com.vladimir_tsurko.ecommerse.presentation.fragments.FragmentLogIn"
         android:label="fragment_log_in"
-        tools:layout="@layout/fragment_log_in" />
+        tools:layout="@layout/fragment_log_in" >
+        <action
+            android:id="@+id/action_fragmentLogIn_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.vladimir_tsurko.ecommerse.presentation.fragments.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
