--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/userInformationFragment">
+    app:startDestination="@id/homeFragment">
 
-    <fragment
-        android:id="@+id/userInformationFragment"
-        android:name="com.vladimir_tsurko.ecommerse.presentation.fragments.UserInformationFragment"
-        android:label="fragment_user_information"
-        tools:layout="@layout/fragment_user_information" />
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.vladimir_tsurko.ecommerse.presentation.fragments.HomeFragment"
+        android:label="fragment_user_information"
+        tools:layout="@layout/fragment_user_information" />
+    <fragment
+        android:id="@+id/userInformationFragment"
+        android:name="com.vladimir_tsurko.ecommerse.presentation.fragments.UserInformationFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <action
