--- a/app/src/main/res/layout/item_flash_sale.xml
+++ b/app/src/main/res/layout/item_flash_sale.xml
@@ -2,8 +2,8 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="120dp"
-    android:layout_height="150dp"
+    android:layout_width="180dp"
+    android:layout_height="220dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:background="?android:attr/selectableItemBackground"
@@ -19,20 +19,20 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/teal_200"
+            android:background="#9B6CC6"
             android:scaleType="centerCrop" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/typeTextView"
-            android:layout_width="36dp"
-            android:layout_height="12dp"
+            android:layout_width="50dp"
+            android:layout_height="18dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="1dp"
             android:background="@drawable/type_background"
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/black"
-            android:textSize="6sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/modelTextView"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,12 +40,12 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/modelTextView"
-            android:layout_width="74dp"
-            android:layout_height="26dp"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="1dp"
             android:textColor="@color/white"
-            android:textSize="10sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/titleTextView"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:layout_marginBottom="8dp"
             android:maxLines="1"
             android:textColor="@color/white"
-            android:textSize="6sp"
+            android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +67,8 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/addButton"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/round_button_background"
