--- a/app/src/main/res/layout/item_flash_sale.xml
+++ b/app/src/main/res/layout/item_flash_sale.xml
@@ -23,7 +23,7 @@
             android:scaleType="centerCrop" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/typeTextView"
+            android:id="@+id/categoryTextView"
             android:layout_width="50dp"
             android:layout_height="18dp"
             android:layout_marginStart="8dp"
@@ -34,12 +34,12 @@
             android:textColor="@color/black"
             android:textSize="10sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/modelTextView"
+            app:layout_constraintBottom_toTopOf="@id/nameTextView"
             app:layout_constraintStart_toStartOf="parent"
             android:text="Phones" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/modelTextView"
+            android:id="@+id/nameTextView"
             android:layout_width="90dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
@@ -47,23 +47,22 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/titleTextView"
+            app:layout_constraintBottom_toTopOf="@id/priceTextView"
             app:layout_constraintStart_toStartOf="parent"
             android:text="Samsung S10" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/titleTextView"
-            android:layout_width="wrap_content"
+            android:id="@+id/priceTextView"
+            android:layout_width="44dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="18dp"
             android:maxLines="1"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="Morty Smith" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/addButton"
