--- a/app/src/main/res/layout/item_flash_sale.xml
+++ b/app/src/main/res/layout/item_flash_sale.xml
@@ -7,8 +7,8 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:background="?android:attr/selectableItemBackground"
-
     app:cardCornerRadius="10dp"
+    app:cardElevation="0dp"
     app:layout_constraintWidth_percent="0.5">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +19,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#9B6CC6"
+            tools:background="#9B6CC6"
             android:scaleType="centerCrop" />
 
         <androidx.appcompat.widget.AppCompatTextView
