--- a/app/src/main/res/layout/item_latest_placeholder.xml
+++ b/app/src/main/res/layout/item_latest_placeholder.xml
@@ -15,76 +15,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:auto_start="true">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <View
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/shimmer_background"
+            android:scaleType="centerCrop" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#AAAAAA"
-                android:scaleType="centerCrop" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/categoryTextView"
-                android:layout_width="36dp"
-                android:layout_height="12dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="1dp"
-                android:background="@drawable/shimmer_background"
-                android:gravity="center"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textSize="6sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/nameTextView"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/nameTextView"
-                android:layout_width="74dp"
-                android:layout_height="26dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="1dp"
-                android:background="@drawable/shimmer_background"
-                android:textColor="@color/white"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/priceTextView"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/priceTextView"
-                android:layout_width="40dp"
-                android:layout_height="10dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/shimmer_background"
-                android:maxLines="1"
-                android:textColor="@color/white"
-                android:textSize="6sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/addButton"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/round_button_background"
-                android:src="@drawable/ic_add"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
-
-
 
 
 </com.google.android.material.card.MaterialCardView>
