--- a/app/src/main/res/layout/item_latest_placeholder.xml
+++ b/app/src/main/res/layout/item_latest_placeholder.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,11 +15,9 @@
         android:layout_height="match_parent"
         app:auto_start="true">
         <View
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/shimmer_background"
-            android:scaleType="centerCrop" />
+            android:background="@drawable/shimmer_background" />
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
