--- a/app/src/main/res/layout/color_list_item.xml
+++ b/app/src/main/res/layout/color_list_item.xml
@@ -3,23 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="40dp"
-    android:layout_height="40dp">
+    android:paddingEnd="8dp"
+    android:layout_width="58dp"
+    android:layout_height="38dp">
 
     <com.google.android.material.card.MaterialCardView
         android:visibility="invisible"
         app:cardBackgroundColor="#beb2a8"
         android:id="@+id/color_container"
         app:cardElevation="0dp"
-        app:cardCornerRadius="4dp"
+        app:cardCornerRadius="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <com.google.android.material.card.MaterialCardView
         app:cardElevation="0dp"
         android:id="@+id/color"
-        app:cardCornerRadius="4dp"
-        android:layout_margin="4dp"
+        app:cardCornerRadius="8dp"
+        android:layout_margin="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:cardBackgroundColor="@color/black"/>
